# tf_packeges

./: .gitignore  Dockerfile  README.md  feed.conf  luci-app-tn-mstpd_git-24.011.22044-557d4ad_all.ipk  luci-i18n-tn-mstpd-ru_git-23.335.27758-c1879be_all.ipk  mstpd_1.0.0-3_mips_4kec.ipk
Doc/: docker_help.md  tehzadanie.md
dm_client/: Makefile
dm_client/src/: CMakeLists.txt  dm_mainHeader.h  main.c  net_utils.c  net_utils.h  parsing.c  parsing.h  run_CLIcmd.c  run_CLIcmd.h  settings_module.c  settings_module.h  state_handler.c  state_handler.h
dmhash/: Makefile
dmhash/src/: Makefile  main.c
flash_mcu/: flashMCU.sh
hwsys/: Makefile
hwsys/src/: Makefile  gpio.c  hwsys_ctrl.c  hwsysd.c  registers.h
log_test/: Makefile
log_test/src/: Makefile  main.c
mstpd/: Makefile
mstpd/src/: bridge-stp.conf  bridge-stp.in  bridge_track.c  bridge_track.c.orig  ctl_functions.h  ctl_main.c  ctl_socket_client.c  ctl_socket_server.c  hmac_md5.c
realtek-poe-tfortis/: Makefile
realtek-poe-tfortis/src/: CMakeLists.txt  main.c
request_ctrl/src/: main.c  registers.h
syslog_fc/: Makefile
syslog_fc/src/: CMakeLists.txt
tf_autorestart/: Makefile
tf_autorestart/src/: CMakeLists.txt  main.c  mainHandler.c  mainHandler.h  mainParam.h  ping.c  ping.h  portConfig.c  portConfig.h  uds_socket_module.c  uds_socket_module.h  utils.c  utils.h
tf_clish/: Makefile
tf_dts/: rtl8380_tfortis_psw-2g8f.dts  rtl838x.mk
tf_file/: 291223.config  Makefile_notwork
tf_poe_restart_ctrl/: Makefile
tf_poe_restart_ctrl/src/: CMakeLists.txt  parsing_command.h
(+171 files in other folders)
